# libgral

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  demo.c  gral.h  gral_linux.c  gral_macos.m  gral_thread.hpp  gral_unix.c  gral_windows.cpp
.github/workflows/: ci.yml
demos/: CMakeLists.txt  audio.c  clipboard.c  cursors.c  draw.c  events.c  file.c  file_dialogs.c  gradients.c  image.c  menu.c  text.c  thread.cpp
